Adding the PR type kind/bump
Signed-off-by: Mohamed Belgaied Hassine <belgaied2@hotmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "weekly"
     labels:
-      - "kind/cleanup"
+      - "kind/bump"
       - "area/dependency"
     ignore:
       # Ignore Cluster-API as its upgraded manually.
