Define default storage class
Signed-off-by: Ivan Sim <ivan.sim@suse.com>

--- a/templates/cluster-template-rke2-dhcp.yaml
+++ b/templates/cluster-template-rke2-dhcp.yaml
@@ -447,6 +447,8 @@ data:
     kind: StorageClass
     metadata:
       name: harvester
+      annotation:
+        storageclass.kubernetes.io/is-default-class: "true"
     allowVolumeExpansion: true
     provisioner: driver.harvesterhci.io
     reclaimPolicy: Delete
